samples/_failures_safe/1761483737_cd2691_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a8ec708b.c: In function ‘main’:
./samples/SAFE/__tmp_a8ec708b.c:134:12: error: missing terminating " character
  134 |     printf("=========================\n
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_a8ec708b.c:134:5: error: expected expression at end of input
  134 |     printf("=========================\n
      |     ^~~~~~
./samples/SAFE/__tmp_a8ec708b.c:134:5: error: expected declaration or statement at end of input
